--- a/Netflix/Index.html
+++ b/Netflix/Index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="hero">
-        <img src="netflix.jpg" class="hero-img" alt="">
-        <div class="tint"></div>
+      <img src="netflix.jpg" class="hero-img" alt="" />
+      <div class="tint"></div>
     </div>
-</body>
-
+  </body>
 </html>
