--- a/Practice1/index.html
+++ b/Practice1/index.html
@@ -1,64 +1,60 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <style>
-        .parent {
-            position: relative;
-            width: 500px;
-            height: 300px;
-            background-color: lightblue;
-            border: 2px solid blue;
-            margin: 50px;
-        }
+      .parent {
+        position: relative;
+        width: 300px;
+        height: 200px;
+        background-color: rgb(22, 22, 22);
+        border: 2px solid rgb(11, 11, 11);
+        margin: 50px 50px;
+      }
 
-        .child {
-            position: absolute;
-            top: 20px;
-            left: 30px;
-            width: 200px;
-            height: 100px;
-            background-color: lightcoral;
-            border: 2px solid red;
+      .child {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        width: 300px;
+        height: 200px;
+        /* width: 200px;
+        height: 100px; */
+        background-color: rgb(0, 0, 0);
+        border: 2px solid rgb(8, 8, 8);
+      }
 
-        }
+      .img1 {
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        position:relative;
+      }
 
-        .img1 {
-            width: 100%;
-            height:100%;
-            z-index: 1;
-            position: relative;
-        }
+      .img2 {
+        width: 100%;
+        height:100%;
+        /* top: 10px; */
+        z-index: 5;
+        position: relative;
+        object-fit: cover;
+      }
 
-        .img2 {
-            width: 100%;
-            
-            top: 10px;
-            z-index: 5;
-            position: absolute;
-            object-fit: cover;
-        }
-
-        p {
-            margin: 10px;
-            font-size: 16px;
-        }
+      p {
+        margin: 10px;
+        font-size: 16px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="parent">
-        <!-- <p>This is the parent paragraph.</p> -->
-        <img src="kanna copy.jpeg" class="img1" alt="image">
+      <!-- <p>This is the parent paragraph.</p> -->
+      <img src="kanna copy.jpeg" class="img1" alt="image" />
 
-        <div class="child">
-            <!-- <p>This is the child paragraph (absolutely positioned).</p> -->
-            <img src="kanna copy.jpeg" class="img2" alt="image">
-
-        </div>
+      <div class="child">
+        <!-- <p>This is the child paragraph (absolutely positioned).</p> -->
+        <img src="kanna copy.jpeg" class="img2" alt="image" />
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
