--- a/Practice1/index.html
+++ b/Practice1/index.html
@@ -6,6 +6,7 @@
         position: relative;
         width: 300px;
         height: 200px;
+        box-shadow: 1px 1px 3px;
         background-color: rgb(22, 22, 22);
         border: 2px solid rgb(11, 11, 11);
         margin: 50px 50px;
@@ -17,8 +18,7 @@
         right: 30px;
         width: 300px;
         height: 200px;
-        /* width: 200px;
-        height: 100px; */
+        box-shadow: 1px 1px 3px;
         background-color: rgb(0, 0, 0);
         border: 2px solid rgb(8, 8, 8);
       }
@@ -33,9 +33,8 @@
       .img2 {
         width: 100%;
         height:100%;
-        /* top: 10px; */
         z-index: 5;
-        position: relative;
+        position: absolute;
         object-fit: cover;
       }
 
