--- a/MY_SCHEDULE/Day_1.html
+++ b/MY_SCHEDULE/Day_1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day_1</title>
     <link rel="stylesheet" href="Day_1.css" />
+    <link rel="icon" href="check.png">
   </head>
 
   <body>
@@ -15,6 +16,7 @@
 
     <div class="task_1">
       <h1>Arrays</h1>
+
     </div>
 
     
