--- a/Positioning_Practice/practice.html
+++ b/Positioning_Practice/practice.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="practice.css">
   <title>Document</title>
 </head>
 <body>
-  <!-- <div>
+  <div>
     <img src="kanna copy.jpeg" class="absolute-image" alt="">
-  </div> -->
+  </div>
   <div>
     <img src="kanna copy.jpeg" alt="" class="relative-img">
   </div>
